--- a/index.html
+++ b/index.html
@@ -99,21 +99,17 @@
     border: 3px solid #fff;
   }
 
-  /* Floating hearts */
-  .heart {
+  /* Emoji floating */
+  .emoji {
     position: fixed;
-    width: 20px;
-    height: 20px;
-    background: url('heart.png') no-repeat center center;
-    background-size: contain;
+    font-size: 24px;
     pointer-events: none;
-    animation: float 4s linear infinite;
+    animation: fall linear;
   }
 
-  @keyframes float {
-    0% { transform: translateY(0) scale(0.8); opacity: 1; }
-    50% { opacity: 0.8; }
-    100% { transform: translateY(-800px) scale(1.2); opacity: 0; }
+  @keyframes fall {
+    0% { transform: translateY(-50px); opacity: 1; }
+    100% { transform: translateY(100vh); opacity: 0; }
   }
 
   /* Shayari section (always visible) */
@@ -182,19 +178,20 @@
     }
   }
 
-  // Floating hearts
-  function createHeart() {
-    const heart = document.createElement('div');
-    heart.classList.add('heart');
-    heart.style.left = Math.random() * window.innerWidth + 'px';
-    heart.style.width = 20 + Math.random() * 30 + 'px';
-    heart.style.height = heart.style.width;
-    heart.style.animationDuration = 3 + Math.random() * 3 + 's';
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 4000);
+  // Floating emojis
+  const emojis = ["💖","😘","💋","😍"];
+  function createEmoji() {
+    const emoji = document.createElement('div');
+    emoji.classList.add('emoji');
+    emoji.textContent = emojis[Math.floor(Math.random()*emojis.length)];
+    emoji.style.left = Math.random() * window.innerWidth + 'px';
+    emoji.style.fontSize = (20 + Math.random()*20) + 'px';
+    emoji.style.animationDuration = (3 + Math.random()*3) + 's';
+    document.body.appendChild(emoji);
+    setTimeout(() => emoji.remove(), 6000);
   }
-  setInterval(createHeart, 500);
+  setInterval(createEmoji, 400);
 </script>
 
 </body>
-  </html>
+</html>
