--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     color: #fff;
     overflow-x: hidden;
     height: 100%;
-    background: url('background.jpg') no-repeat center center fixed;
+    background: url('background.gif') no-repeat center center fixed;
     background-size: cover;
   }
 
