--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     font-size: 3rem;
     margin-bottom: 20px;
     color: #ffe6f0;
+    text-shadow: 2px 2px 8px #ff66b2;
   }
 
   .password-container p {
@@ -90,6 +91,7 @@
     font-size: 3rem;
     margin-bottom: 20px;
     color: #ffe6f0;
+    text-shadow: 2px 2px 10px #ff66b2;
   }
 
   .header img {
@@ -97,6 +99,7 @@
     height: auto;
     border-radius: 15px;
     border: 3px solid #fff;
+    box-shadow: 0 0 20px #ff66b2;
   }
 
   /* Floating emojis */
@@ -130,10 +133,12 @@
     backdrop-filter: blur(5px);
     cursor: pointer;
     transition: 0.3s;
+    box-shadow: 0 0 10px rgba(255,255,255,0.3);
   }
 
   .shayari-container:hover {
     background: rgba(255,255,255,0.2);
+    box-shadow: 0 0 20px rgba(255,182,193,0.6);
   }
 
   .shayari-text {
@@ -158,13 +163,14 @@
     height: auto;
     display: none;
     border-radius: 10px;
+    box-shadow: 0 0 20px #ff66b2;
+    transition: 0.3s;
   }
 
   .sparkle {
     position: absolute;
-    width: 6px;
-    height: 6px;
-    background: gold;
+    width: 5px;
+    height: 5px;
     border-radius: 50%;
     pointer-events: none;
     animation: sparkleAnim 1s linear infinite;
@@ -182,6 +188,7 @@
     font-family: 'Pacifico', cursive;
     margin-top: 50px;
     color: #ffe6f0;
+    text-shadow: 2px 2px 10px #ff66b2;
   }
 
 </style>
@@ -209,7 +216,7 @@
 
     <div class="shayari-container" onclick="toggleGif(this)">
       <div class="shayari-text">"Tere honthon ki khamoshi, meri dhadkan ka raaz hai."</div>
-      <div class="touch-text">Touch shayari 🫵🏻</div>
+      <div class="touch-text">Touch for gf🫵🏻</div>
       <div class="shayari-gif-container">
         <img src="shayari1.gif" alt="Shayari GIF 1" class="shayari-gif">
       </div>
@@ -217,7 +224,7 @@
 
     <div class="shayari-container" onclick="toggleGif(this)">
       <div class="shayari-text">"Ek chhota sa kiss, dil ke har kone ko choo jaye."</div>
-      <div class="touch-text">Touch shayari 🫵🏻</div>
+      <div class="touch-text">Touch for gf🫵🏻</div>
       <div class="shayari-gif-container">
         <img src="shayari2.gif" alt="Shayari GIF 2" class="shayari-gif">
       </div>
@@ -225,7 +232,7 @@
 
     <div class="shayari-container" onclick="toggleGif(this)">
       <div class="shayari-text">"Kiss Day ke din, tumhari muskaan meri duniya hai."</div>
-      <div class="touch-text">Touch shayari 🫵🏻</div>
+      <div class="touch-text">Touch for gf🫵🏻</div>
       <div class="shayari-gif-container">
         <img src="shayari3.gif" alt="Shayari GIF 3" class="shayari-gif">
       </div>
@@ -233,7 +240,7 @@
 
     <div class="shayari-container" onclick="toggleGif(this)">
       <div class="shayari-text">"Pyaar ka izhaar, ek pyara sa kiss ke saath."</div>
-      <div class="touch-text">Touch shayari 🫵🏻</div>
+      <div class="touch-text">Touch for gf🫵🏻</div>
       <div class="shayari-gif-container">
         <img src="shayari4.gif" alt="Shayari GIF 4" class="shayari-gif">
       </div>
@@ -241,7 +248,7 @@
 
     <div class="shayari-container" onclick="toggleGif(this)">
       <div class="shayari-text">"Tere labon pe bas yahi dua, hamesha khush rahe tu."</div>
-      <div class="touch-text">Touch shayari 🫵🏻</div>
+      <div class="touch-text">Touch for gf🫵🏻</div>
       <div class="shayari-gif-container">
         <img src="shayari5.gif" alt="Shayari GIF 5" class="shayari-gif">
       </div>
@@ -256,6 +263,7 @@
 
 <script>
   let openGif = null; // Track currently open GIF
+  const colors = ["gold","pink","purple","cyan"];
 
   // Password check
   function checkPassword() {
@@ -306,19 +314,23 @@
     }
   }
 
-  // Sparkles
+  // Sparkles around GIF
   function createSparkles(container) {
-    for(let i=0;i<20;i++){
+    const gifContainer = container.querySelector('.shayari-gif-container');
+    for(let i=0;i<25;i++){
       const sparkle = document.createElement('div');
       sparkle.classList.add('sparkle');
-      sparkle.style.left = Math.random()*230+'px';
-      sparkle.style.top = Math.random()*(-30)+'px';
-      container.querySelector('.shayari-gif-container').appendChild(sparkle);
-      setTimeout(() => sparkle.remove(), 1000);
+      sparkle.style.left = Math.random()*240+'px';
+      sparkle.style.top = Math.random()*(-40)+'px';
+      sparkle.style.background = colors[Math.floor(Math.random()*colors.length)];
+      sparkle.style.width = 4 + Math.random()*4 + 'px';
+      sparkle.style.height = 4 + Math.random()*4 + 'px';
+      gifContainer.appendChild(sparkle);
+      setTimeout(() => sparkle.remove(), 1000 + Math.random()*500);
     }
   }
 
 </script>
 
 </body>
-</html>
+  </html>
