--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
     background-size: cover;
   }
 
+  /* Background particles */
+  .bg-particle {
+    position: fixed;
+    width: 4px;
+    height: 4px;
+    background: white;
+    border-radius: 50%;
+    opacity: 0.8;
+    pointer-events: none;
+    animation: bgMove linear infinite;
+  }
+
+  @keyframes bgMove {
+    0% {transform: translateY(0);}
+    100% {transform: translateY(100vh);}
+  }
+
   /* Password overlay */
   .password-container {
     position: fixed;
@@ -179,7 +196,6 @@
     position: absolute;
     width: 5px;
     height: 5px;
-    border-radius: 50%;
     pointer-events: none;
     animation: sparkleAnim 1s linear infinite;
   }
@@ -190,6 +206,19 @@
     100% {transform: translate(-10px,-40px) scale(0.5); opacity:0;}
   }
 
+  /* Floating hearts */
+  .heart {
+    position: absolute;
+    font-size: 20px;
+    animation: floatHeart 2s linear forwards;
+  }
+
+  @keyframes floatHeart {
+    0% {transform: translateY(0) scale(1); opacity:1;}
+    100% {transform: translateY(-150px) scale(1.5); opacity:0;}
+  }
+
+  /* End message + confetti */
   .end-message {
     text-align: center;
     font-size: 2rem;
@@ -197,6 +226,21 @@
     margin-top: 50px;
     color: #ffe6f0;
     text-shadow: 2px 2px 10px #ff66b2;
+    position: relative;
+  }
+
+  .confetti {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: red;
+    pointer-events: none;
+    animation: confettiFall 3s linear forwards;
+  }
+
+  @keyframes confettiFall {
+    0% { transform: translateY(0) rotate(0deg); opacity:1; }
+    100% { transform: translateY(500px) rotate(360deg); opacity:0; }
   }
 
 </style>
@@ -264,7 +308,7 @@
 
   </div>
 
-  <div class="end-message">
+  <div class="end-message" id="endMessage">
     I ❤️YOU CUTIE 😘
   </div>
 </div>
@@ -284,6 +328,7 @@
       container.style.display = "none";
       mainContent.style.display = "block";
       window.scrollTo(0,0);
+      createBgParticles();
     } else {
       errorMsg.textContent = "Wrong password! Try again 💔";
     }
@@ -303,18 +348,20 @@
   }
   setInterval(createEmoji, 400);
 
-  // Toggle GIF + sparkles
+  // Toggle GIF + sparkles + floating hearts
+  const sparkleIntervals = new Map();
   function toggleGif(container) {
     const gif = container.querySelector('.shayari-gif');
 
     if(openGif && openGif !== gif) {
       openGif.style.display = "none";
+      stopContinuousSparkles(openGif.parentElement.parentElement);
     }
 
     if (gif.style.display === "none" || gif.style.display === "") {
       gif.style.display = "block";
-      createSparkles(container);
-      startContinuousSparkles(container); // continuous sparkles
+      startContinuousSparkles(container);
+      createFloatingHearts(container);
       openGif = gif;
     } else {
       gif.style.display = "none";
@@ -323,27 +370,9 @@
     }
   }
 
-  // One-time sparkles
-  function createSparkles(container) {
+  function createSparkles(container){
     const gifContainer = container.querySelector('.shayari-gif-container');
     for(let i=0;i<25;i++){
-      const sparkle = document.createElement('div');
-      sparkle.classList.add('sparkle');
-      sparkle.style.left = Math.random()*240+'px';
-      sparkle.style.top = Math.random()*(-40)+'px';
-      sparkle.style.background = colors[Math.floor(Math.random()*colors.length)];
-      sparkle.style.width = 4 + Math.random()*4 + 'px';
-      sparkle.style.height = 4 + Math.random()*4 + 'px';
-      gifContainer.appendChild(sparkle);
-      setTimeout(() => sparkle.remove(), 1000 + Math.random()*500);
-    }
-  }
-
-  // Continuous sparkles
-  const sparkleIntervals = new Map();
-  function startContinuousSparkles(container){
-    const gifContainer = container.querySelector('.shayari-gif-container');
-    const interval = setInterval(() => {
       const sparkle = document.createElement('div');
       sparkle.classList.add('sparkle');
       sparkle.style.left = Math.random()*300+'px';
@@ -352,8 +381,23 @@
       sparkle.style.width = 4 + Math.random()*4 + 'px';
       sparkle.style.height = 4 + Math.random()*4 + 'px';
       gifContainer.appendChild(sparkle);
-      setTimeout(() => sparkle.remove(), 1200);
-    }, 200);
+      setTimeout(()=>sparkle.remove(), 1000 + Math.random()*500);
+    }
+  }
+
+  function startContinuousSparkles(container){
+    const gifContainer = container.querySelector('.shayari-gif-container');
+    const interval = setInterval(()=>{
+      const sparkle = document.createElement('div');
+      sparkle.classList.add('sparkle');
+      sparkle.style.left = Math.random()*300+'px';
+      sparkle.style.top = Math.random()*(-40)+'px';
+      sparkle.style.background = colors[Math.floor(Math.random()*colors.length)];
+      sparkle.style.width = 4 + Math.random()*4 + 'px';
+      sparkle.style.height = 4 + Math.random()*4 + 'px';
+      gifContainer.appendChild(sparkle);
+      setTimeout(()=>sparkle.remove(),1200);
+    },200);
     sparkleIntervals.set(container, interval);
   }
 
@@ -362,7 +406,52 @@
     sparkleIntervals.delete(container);
   }
 
-</script>
+  function createFloatingHearts(container){
+    const gifContainer = container.querySelector('.shayari-gif-container');
+    for(let i=0;i<10;i++){
+      const heart = document.createElement('div');
+      heart.classList.add('heart');
+      heart.textContent = "💖";
+      heart.style.left = Math.random()*250+'px';
+      gifContainer.appendChild(heart);
+      setTimeout(()=>heart.remove(),2000);
+    }
+  }
 
+  // Background particles
+  function createBgParticles(){
+    for(let i=0;i<50;i++){
+      const particle = document.createElement('div');
+      particle.classList.add('bg-particle');
+      particle.style.left = Math.random()*window.innerWidth+'px';
+      particle.style.width = 2 + Math.random()*3 + 'px';
+      particle.style.height = particle.style.width;
+      particle.style.opacity = 0.5 + Math.random()*0.5;
+      particle.style.animationDuration = 5 + Math.random()*5 +'s';
+      document.body.appendChild(particle);
+    }
+  }
+
+  // Confetti for end message
+  const endMessage = document.getElementById('endMessage');
+  function createConfetti(){
+    for(let i=0;i<50;i++){
+      const c = document.createElement('div');
+      c.classList.add('confetti');
+      c.style.left = Math.random()*window.innerWidth+'px';
+      c.style.background = colors[Math.floor(Math.random()*colors.length)];
+      endMessage.appendChild(c);
+      setTimeout(()=>c.remove(),3000);
+    }
+  }
+
+  // Trigger confetti when scroll to end
+  window.addEventListener('scroll', ()=>{
+    if(window.innerHeight + window.scrollY >= document.body.offsetHeight - 100){
+      createConfetti();
+    }
+  });
+
+</script>
 </body>
-</html>
+  </html>
