--- a/index.html
+++ b/index.html
@@ -17,24 +17,6 @@
     background-size: cover;
   }
 
-  /* Background particles */
-  .bg-particle {
-    position: fixed;
-    width: 4px;
-    height: 4px;
-    background: white;
-    border-radius: 50%;
-    opacity: 0.8;
-    pointer-events: none;
-    animation: bgMove linear infinite;
-  }
-
-  @keyframes bgMove {
-    0% {transform: translateY(0);}
-    100% {transform: translateY(100vh);}
-  }
-
-  /* Password overlay */
   .password-container {
     position: fixed;
     top:0; left:0; right:0; bottom:0;
@@ -56,31 +38,28 @@
   }
 
   .password-container p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
+    font-size: 1.1rem;
+    margin-bottom: 10px;
     color: #fff0f5;
   }
 
-  .password-container input[type="password"] {
+  .password-container input {
     padding: 10px;
     font-size: 1rem;
     border-radius: 10px;
     border: none;
-    outline: none;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     width: 200px;
     text-align: center;
   }
 
   .password-container button {
     padding: 10px 20px;
-    font-size: 1rem;
-    border: none;
     border-radius: 10px;
+    border: none;
     background: #ff66b2;
-    color: #fff;
+    color: white;
     cursor: pointer;
-    transition: 0.3s;
   }
 
   .password-container button:hover {
@@ -92,7 +71,6 @@
     font-weight: bold;
   }
 
-  /* Main content hidden initially */
   .main-content {
     display: none;
     padding-bottom: 50px;
@@ -106,33 +84,17 @@
   .header h1 {
     font-family: 'Pacifico', cursive;
     font-size: 3rem;
-    margin-bottom: 20px;
     color: #ffe6f0;
     text-shadow: 2px 2px 10px #ff66b2;
   }
 
   .header img {
     width: 300px;
-    height: auto;
     border-radius: 15px;
     border: 3px solid #fff;
     box-shadow: 0 0 30px #ff66b2;
   }
 
-  /* Floating emojis */
-  .emoji {
-    position: fixed;
-    font-size: 24px;
-    pointer-events: none;
-    animation: fall linear;
-  }
-
-  @keyframes fall {
-    0% { transform: translateY(-50px); opacity: 1; }
-    100% { transform: translateY(100vh); opacity: 0; }
-  }
-
-  /* Shayari section */
   .shayari-section {
     padding: 50px 20px;
     display: flex;
@@ -149,13 +111,6 @@
     border-radius: 15px;
     backdrop-filter: blur(5px);
     cursor: pointer;
-    transition: 0.3s;
-    box-shadow: 0 0 10px rgba(255,255,255,0.3);
-  }
-
-  .shayari-container:hover {
-    background: rgba(255,255,255,0.2);
-    box-shadow: 0 0 25px rgba(255,182,193,0.6);
   }
 
   .shayari-text {
@@ -163,295 +118,110 @@
     margin-bottom: 5px;
   }
 
-  /* Touch text glow animation */
   .touch-text {
-    color: #ffe6f0;
     font-weight: bold;
     margin-bottom: 10px;
-    font-size: 1rem;
-    animation: pulse 1.5s infinite;
-  }
-
-  @keyframes pulse {
-    0% { text-shadow: 0 0 5px #ff66b2, 0 0 10px #ff66b2; }
-    50% { text-shadow: 0 0 20px #ff66b2, 0 0 30px #ff66b2; }
-    100% { text-shadow: 0 0 5px #ff66b2, 0 0 10px #ff66b2; }
-  }
-
-  .shayari-gif-container {
-    position: relative;
-    display: inline-block;
   }
 
   .shayari-gif-container img {
-    width: 300px; /* Bigger GIF */
-    height: auto;
+    width: 300px;
     display: none;
     border-radius: 10px;
     box-shadow: 0 0 30px #ff66b2;
-    transition: 0.3s;
   }
 
-  .sparkle {
-    position: absolute;
-    width: 5px;
-    height: 5px;
-    pointer-events: none;
-    animation: sparkleAnim 1s linear infinite;
-  }
-
-  @keyframes sparkleAnim {
-    0% {transform: translate(0,0) scale(0.5); opacity:1;}
-    50% {transform: translate(10px,-20px) scale(1); opacity:0.7;}
-    100% {transform: translate(-10px,-40px) scale(0.5); opacity:0;}
-  }
-
-  /* Floating hearts */
-  .heart {
-    position: absolute;
-    font-size: 20px;
-    animation: floatHeart 2s linear forwards;
-  }
-
-  @keyframes floatHeart {
-    0% {transform: translateY(0) scale(1); opacity:1;}
-    100% {transform: translateY(-150px) scale(1.5); opacity:0;}
-  }
-
-  /* End message + confetti */
   .end-message {
     text-align: center;
     font-size: 2rem;
     font-family: 'Pacifico', cursive;
     margin-top: 50px;
-    color: #ffe6f0;
-    text-shadow: 2px 2px 10px #ff66b2;
-    position: relative;
   }
-
-  .confetti {
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    background: red;
-    pointer-events: none;
-    animation: confettiFall 3s linear forwards;
-  }
-
-  @keyframes confettiFall {
-    0% { transform: translateY(0) rotate(0deg); opacity:1; }
-    100% { transform: translateY(500px) rotate(360deg); opacity:0; }
-  }
-
 </style>
 </head>
 <body>
 
-<!-- Password overlay -->
 <div class="password-container" id="passwordContainer">
   <h1>Happy Kiss Day Cutie 💋</h1>
-  <p>Your password is <strong>134285</strong></p>
-  <input type="password" id="password" placeholder="Enter password">
-  <br>
+
+  <p><strong>6 digit password: your datemonth + my datemonth</strong></p>
+  <p style="font-size:14px;opacity:0.8;">Only we know this password 😎</p>
+
+  <input type="password" id="password" placeholder="Enter 6 digit password">
   <button onclick="checkPassword()">Unlock</button>
   <div class="error" id="errorMsg"></div>
 </div>
 
-<!-- Main content -->
 <div class="main-content" id="mainContent">
   <div class="header">
     <h1>Happy Kiss Day 💋</h1>
-    <img src="kiss.gif" alt="Kiss GIF">
+    <img src="kiss.gif">
   </div>
 
   <div class="shayari-section">
 
     <div class="shayari-container" onclick="toggleGif(this)">
-      <div class="shayari-text">"Tere honthon ki khamoshi, meri dhadkan ka raaz hai."</div>
+      <div class="shayari-text">"Har din aapse pyaar krta hu, aur har din thoda thoda badhta ja raha hai✨💞"</div>
       <div class="touch-text">Touch for gf🫵🏻</div>
       <div class="shayari-gif-container">
-        <img src="shayari1.gif" alt="Shayari GIF 1" class="shayari-gif">
+        <img src="shayari1.gif" class="shayari-gif">
       </div>
     </div>
 
     <div class="shayari-container" onclick="toggleGif(this)">
-      <div class="shayari-text">"Ek chhota sa kiss, dil ke har kone ko choo jaye."</div>
+      <div class="shayari-text">"Bas Aap, Aapki Khushi aur ek pyaar sa kiss... aur kuch nhi chahiye ❤️"</div>
       <div class="touch-text">Touch for gf🫵🏻</div>
       <div class="shayari-gif-container">
-        <img src="shayari2.gif" alt="Shayari GIF 2" class="shayari-gif">
+        <img src="shayari2.gif" class="shayari-gif">
       </div>
     </div>
 
     <div class="shayari-container" onclick="toggleGif(this)">
-      <div class="shayari-text">"Kiss Day ke din, tumhari muskaan meri duniya hai."</div>
+      <div class="shayari-text">"Kiss Day ke din, Aapki Happiness hi mera pura world hai 🌎🌍."</div>
       <div class="touch-text">Touch for gf🫵🏻</div>
       <div class="shayari-gif-container">
-        <img src="shayari3.gif" alt="Shayari GIF 3" class="shayari-gif">
+        <img src="shayari3.gif" class="shayari-gif">
       </div>
     </div>
 
     <div class="shayari-container" onclick="toggleGif(this)">
-      <div class="shayari-text">"Pyaar ka izhaar, ek pyara sa kiss ke saath."</div>
+      <div class="shayari-text">"Pyaar ka proposal, ek pyara sa kiss ke saath 😘"</div>
       <div class="touch-text">Touch for gf🫵🏻</div>
       <div class="shayari-gif-container">
-        <img src="shayari4.gif" alt="Shayari GIF 4" class="shayari-gif">
+        <img src="shayari4.gif" class="shayari-gif">
       </div>
     </div>
 
     <div class="shayari-container" onclick="toggleGif(this)">
-      <div class="shayari-text">"Tere labon pe bas yahi dua, hamesha khush rahe tu."</div>
+      <div class="shayari-text">"Mere bas yahi dua, Aap hamesha khush rahe ☺️"</div>
       <div class="touch-text">Touch for gf🫵🏻</div>
       <div class="shayari-gif-container">
-        <img src="shayari5.gif" alt="Shayari GIF 5" class="shayari-gif">
+        <img src="shayari5.gif" class="shayari-gif">
       </div>
     </div>
 
   </div>
 
-  <div class="end-message" id="endMessage">
-    I ❤️YOU CUTIE 😘
+  <div class="end-message">
+    I ❤️ YOU BUBU 😘
   </div>
 </div>
 
 <script>
-  let openGif = null; 
-  const colors = ["gold","pink","purple","cyan"];
-
-  // Password check
-  function checkPassword() {
-    const input = document.getElementById('password').value;
-    const errorMsg = document.getElementById('errorMsg');
-    const container = document.getElementById('passwordContainer');
-    const mainContent = document.getElementById('mainContent');
-
-    if(input === "134285") {
-      container.style.display = "none";
-      mainContent.style.display = "block";
-      window.scrollTo(0,0);
-      createBgParticles();
-    } else {
-      errorMsg.textContent = "Wrong password! Try again 💔";
-    }
+function checkPassword() {
+  const input = document.getElementById('password').value;
+  if(input === "134285") {
+    document.getElementById('passwordContainer').style.display = "none";
+    document.getElementById('mainContent').style.display = "block";
+  } else {
+    document.getElementById('errorMsg').textContent = "Wrong password! Try again 💔";
   }
+}
 
-  // Floating emojis
-  const emojis = ["💖","😘","💋","😍"];
-  function createEmoji() {
-    const emoji = document.createElement('div');
-    emoji.classList.add('emoji');
-    emoji.textContent = emojis[Math.floor(Math.random()*emojis.length)];
-    emoji.style.left = Math.random() * window.innerWidth + 'px';
-    emoji.style.fontSize = (20 + Math.random()*20) + 'px';
-    emoji.style.animationDuration = (3 + Math.random()*3) + 's';
-    document.body.appendChild(emoji);
-    setTimeout(() => emoji.remove(), 6000);
-  }
-  setInterval(createEmoji, 400);
-
-  // Toggle GIF + sparkles + floating hearts
-  const sparkleIntervals = new Map();
-  function toggleGif(container) {
-    const gif = container.querySelector('.shayari-gif');
-
-    if(openGif && openGif !== gif) {
-      openGif.style.display = "none";
-      stopContinuousSparkles(openGif.parentElement.parentElement);
-    }
-
-    if (gif.style.display === "none" || gif.style.display === "") {
-      gif.style.display = "block";
-      startContinuousSparkles(container);
-      createFloatingHearts(container);
-      openGif = gif;
-    } else {
-      gif.style.display = "none";
-      stopContinuousSparkles(container);
-      openGif = null;
-    }
-  }
-
-  function createSparkles(container){
-    const gifContainer = container.querySelector('.shayari-gif-container');
-    for(let i=0;i<25;i++){
-      const sparkle = document.createElement('div');
-      sparkle.classList.add('sparkle');
-      sparkle.style.left = Math.random()*300+'px';
-      sparkle.style.top = Math.random()*(-40)+'px';
-      sparkle.style.background = colors[Math.floor(Math.random()*colors.length)];
-      sparkle.style.width = 4 + Math.random()*4 + 'px';
-      sparkle.style.height = 4 + Math.random()*4 + 'px';
-      gifContainer.appendChild(sparkle);
-      setTimeout(()=>sparkle.remove(), 1000 + Math.random()*500);
-    }
-  }
-
-  function startContinuousSparkles(container){
-    const gifContainer = container.querySelector('.shayari-gif-container');
-    const interval = setInterval(()=>{
-      const sparkle = document.createElement('div');
-      sparkle.classList.add('sparkle');
-      sparkle.style.left = Math.random()*300+'px';
-      sparkle.style.top = Math.random()*(-40)+'px';
-      sparkle.style.background = colors[Math.floor(Math.random()*colors.length)];
-      sparkle.style.width = 4 + Math.random()*4 + 'px';
-      sparkle.style.height = 4 + Math.random()*4 + 'px';
-      gifContainer.appendChild(sparkle);
-      setTimeout(()=>sparkle.remove(),1200);
-    },200);
-    sparkleIntervals.set(container, interval);
-  }
-
-  function stopContinuousSparkles(container){
-    clearInterval(sparkleIntervals.get(container));
-    sparkleIntervals.delete(container);
-  }
-
-  function createFloatingHearts(container){
-    const gifContainer = container.querySelector('.shayari-gif-container');
-    for(let i=0;i<10;i++){
-      const heart = document.createElement('div');
-      heart.classList.add('heart');
-      heart.textContent = "💖";
-      heart.style.left = Math.random()*250+'px';
-      gifContainer.appendChild(heart);
-      setTimeout(()=>heart.remove(),2000);
-    }
-  }
-
-  // Background particles
-  function createBgParticles(){
-    for(let i=0;i<50;i++){
-      const particle = document.createElement('div');
-      particle.classList.add('bg-particle');
-      particle.style.left = Math.random()*window.innerWidth+'px';
-      particle.style.width = 2 + Math.random()*3 + 'px';
-      particle.style.height = particle.style.width;
-      particle.style.opacity = 0.5 + Math.random()*0.5;
-      particle.style.animationDuration = 5 + Math.random()*5 +'s';
-      document.body.appendChild(particle);
-    }
-  }
-
-  // Confetti for end message
-  const endMessage = document.getElementById('endMessage');
-  function createConfetti(){
-    for(let i=0;i<50;i++){
-      const c = document.createElement('div');
-      c.classList.add('confetti');
-      c.style.left = Math.random()*window.innerWidth+'px';
-      c.style.background = colors[Math.floor(Math.random()*colors.length)];
-      endMessage.appendChild(c);
-      setTimeout(()=>c.remove(),3000);
-    }
-  }
-
-  // Trigger confetti when scroll to end
-  window.addEventListener('scroll', ()=>{
-    if(window.innerHeight + window.scrollY >= document.body.offsetHeight - 100){
-      createConfetti();
-    }
-  });
-
+function toggleGif(container) {
+  const gif = container.querySelector('.shayari-gif');
+  gif.style.display = gif.style.display === "block" ? "none" : "block";
+}
 </script>
+
 </body>
   </html>
